# src/routes/statistics.routes.ts
@@ -1,10 +1,11 @@
 import { Router } from "express";
-import { getProfStatistics, getStatistics } from "../controllers/statistics.controller";
+import { getAdminStatistics, getProfStatistics, getStatistics } from "../controllers/statistics.controller";
 import { authentification } from "../middleware/authentification";
 
 const statisticRouter = Router();
 
-statisticRouter.get("/", authentification, getStatistics);
-statisticRouter.get("/:id", authentification, getProfStatistics);
+statisticRouter.get("/business", authentification, getStatistics);
+statisticRouter.get("/admin", authentification, getAdminStatistics);
+statisticRouter.get("/prof/:id", authentification, getProfStatistics);
 
 export default statisticRouter;
